# dist_task

./: CMakeLists.txt  Client.cpp  Client.h  Commands.cpp  Commands.h  Dockerfile  MPIHelper.cpp  MPIHelper.h  Messaging.h  Server.cpp  Server.h  faulty_reads.toml  main.cpp  operations.toml
integrals-ulfm/: CMakeLists.txt  main.cpp  messaging.cpp  messaging.h  types.h
report/: report.tex
voting-protocol/: CMakeLists.txt  Client.cpp  Client.h  Commands.cpp  MPIHelper.h  Server.cpp  Server.h
